# engeybot

./: .dockerignore  .gitignore  Dockerfile  README.MD  bot.py  config.py  docker-compose.yml  generators.py  guest_handler.py  main.py  pyproject.toml  railway.json  req.txt  router.py  test.py  tts.py
.kiro/steering/: function-calling.md  gemini-3.md  gemini.md  google-search.md  image-generation.md  image-understanding.md  structured-output.md  thinking.md  thought-signatures.md  url-context.md  video-understanding.md
agentic/: __init__.py  decomposer.py  handler.py  models.py  mongo_store.py  researcher.py  status_manager.py  synthesizer.py
tests/: test_decomposer.py  test_models.py  test_mongo_store.py  test_researcher.py  test_status_manager.py  test_synthesizer.py
